# solana_academy

./: README.md
account_data/: Anchor.toml
account_data/programs/account_data/: Cargo.toml
account_data/tests/: account_data.ts
basic_2/: Anchor.toml
basic_2/programs/basic_2/: Cargo.toml
basic_2/tests/: basic_2.ts
basic_3/: Anchor.toml
basic_3/programs/basic_3/: Cargo.toml
basic_3/tests/: basic_3.ts
counter/: Anchor.toml
counter/tests/: counter.ts
demo_dpa/: Anchor.toml
demo_dpa/programs/demo_dpa/: Cargo.toml
demo_dpa/tests/: demo_dpa.ts
mint_nft/: Anchor.toml  package.json
mint_nft/programs/mint_nft/: Cargo.toml
mint_nft/tests/: mint_nft.ts  test.ts
pda_transfer_service_fee_lamports/: Anchor.toml  package-lock.json
pda_transfer_service_fee_lamports/programs/pda_transfer_service_fee_lamports/: Cargo.toml
pda_transfer_service_fee_lamports/programs/pda_transfer_service_fee_lamports/src/: lib.rs
pda_transfer_service_fee_lamports/tests/: pda_transfer_service_fee_lamports.ts
proxy_token/: Anchor.toml
proxy_token/programs/proxy_token/: Cargo.toml
proxy_token/tests/: proxy_token.ts
puppet/: Anchor.toml
puppet/programs/puppet/: Cargo.toml
puppet/programs/puppet-master/: Cargo.toml
puppet/tests/: puppet.ts  puppet_master.ts
transfer_pda_invoke_signed/: Anchor.toml  package-lock.json
transfer_pda_invoke_signed/programs/transfer_pda_invoke_signed/: Cargo.toml
transfer_pda_invoke_signed/programs/transfer_pda_invoke_signed/src/: lib.rs
transfer_pda_invoke_signed/tests/: providerPda.ts  userPda.ts
(+10 files in other folders)
